@@ -47,13 +47,13 @@
 		</ul>
 	</li>
 	<li id="menu_execute">
-		<div>Run Query</div>
+		<div>Run <svg viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" width="14" height="14"><path d="M4.79 2.093A.5.5 0 004 2.5v10a.5.5 0 00.79.407l7-5a.5.5 0 000-.814l-7-5z" fill="currentColor"></path></svg></div>
 	</li>
 	<li id="menu_browse">
-		<div>Browse Activities</div>
+		<div>View on d-portal</div>
 	</li>
 	<li id="download_xson">
-		<div>Download XSON</div>
+		<div>Download <svg viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" width="14" height="14"><path fill-rule="evenodd" clip-rule="evenodd" d="M7 9.358V1h1v8.293l2.146-2.147.708.708-3.34 3.34L3.91 7.866l.678-.734L7 9.358zM2 13V7H1v7h13V7h-1v6H2z" fill="currentColor"></path></svg></div>
 		<ul>
 			<li id="download_xson_as_json">
 				<div>Download XSON as json</div>
@@ -70,5 +70,5 @@
 		</ul>
 	</li>
 </ul>
-<div class="about">d-Portal <b>dquery</b> is a read only SQL interface to the full database</div>
+<div class="about"><b>dquery</b> is a read only SQL interface to IATI data</div>
 <div id="top_title"></div>
